docs: default routes
